tests/NormalTests/paczka1/fuzzy1/82814823.err
Error in line 5: gCXhBVgPlbD A239 68,6
Error in line 8: gCXhBVgPlbD S264 5,1
Error in line 30: A518 A239 44,3
Error in line 36: 96iI A518 72,8
